[B]Version 5.0.29 (December 22, 2018)[/B]
- Code Base Changes:
    - magnet link support using Real-Debrid (experimental)
    - add HTTP DELETE method
    - new Real-Debrid CLIENT ID (you will need to re-authorize)
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - realdebrid
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.28 (December 18, 2018)[/B]
- Code Base Changes:
    - torrent and magnet link support using Premiumize (experimental)
- Resolvers Added:
    - none
- Resolvers Fixed/Updated:
    - premiumize
- Resolvers Removed
    - none
- Languages Added/Updated
    - English
    - English(US)

[B]Version 5.0.27 (December 13, 2018)[/B]
- Code Base Changes:
    - new sorting method
- Resolvers Added:
    - fembed
    - fileholic
    - movierulz
    - kupload
- Resolvers Fixed/Updated:
    - mehlizmovies
    - premiumize
    - rapidvideo
    - vidup
- Resolvers Removed
    - none
- Languages Added/Updated
    - none

[B]Version 5.0.26 (November 27, 2018)[/B]
- Code Base Changes:
    - option to globally disable hosts that use popups
    - better handling of disabling resolvers that use popups
    - aadecode
- Resolvers Added:
    - vevio
    - cloudvideo
    - vkspeed
    - superitu
    - irshare
- Resolvers Fixed/Updated:
    - vidboom
    - vidcloud
    - openload
    - thevid
    - rapidvideo
    - streamango
    - streamable
    - vivosx
    - vidtodo
    - premiumize
- Resolvers Removed
    - thevideo.me
    - many dead hosts
- Languages Added/Updated
    - English
    - English(US)

[B]Version 5.0.24 (October 22, 2018)[/B]
- Code Base Changes:
    - jsunpack
- Resolvers Added:
    - vkprime
    - myupload
    - streamcloud
    - flix555
    - xclip
- Resolvers Fixed/Updated:
    - rapidvideo.com
    - tunepk
    - cda
    - videozoo
    - gounlimited
    - tvlogy
- Resolvers Removed
    - None
- Languages Added/Updated
    - None

[B]Version 5.0.23 (September 20, 2018)[/B]
- Code Base Changes:
    - None